--- a/css/global.css
+++ b/css/global.css
@@ -13,5 +13,20 @@ ul{
 }
 img{
   max-width: 100%;/*o maximo dela sem estourar*/
+  height: auto;
   display: block;/*não crescer infinitamente*/
+}
+.subtitulo{
+  font-size:8rem;
+  line-height: 1;
+  text-transform: uppercase;
+  word-break:break-all;
+  max-width:4ch/*quebrar em 4*/
+}
+@media (max-width:800px){
+  .subtitulo{
+    font-size:3rem;
+    text-transform: capitalize;/*aumenta somente primeira letra*/
+    max-width: initial !important;
+}
 }
